--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,15 @@
     <%= javascript_include_tag 'application' %>
 
     <%# current_user is pre-defined method in app controller %>
-
+    <% if current_user %>
+      <script>
+        window.currentUser = {
+          "id": <%= current_user.id %>,
+          "username": "<%= current_user.username %>",
+          "email": "<%= current_user.email %>"
+        };
+      </script>
+    <% end %>
   </head>
 
   <body>
