--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -23,7 +23,18 @@
  .hero-img-frame {
    position: absolute;
    width: 100%;
-   max-height: 500px;
+   max-height: 200px;
+   overflow: hidden;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   z-index: -1;
+ }
+
+.product-img-frame {
+   position: absolute;
+   width: 100%;
+   max-height: 20%;
    overflow: hidden;
    display: flex;
    justify-content: center;
@@ -35,11 +46,16 @@
    width: 100%;
  }
 
+ .product-img {
+  height: 190px;
+  width: 200px;
+ }
+
  .home {
-   min-height: 400px;
+   min-height: 250px;
    display: flex;
    justify-content: center;
-   align-items: flex-end;
+  //  align-items: flex-end;
    h1 {
     height: 100%;
     z-index: 1;
