--- a/app/assets/stylesheets/nav_bar.scss
+++ b/app/assets/stylesheets/nav_bar.scss
@@ -1,22 +1,53 @@
- .nav-bar {
-   background: white;
-   display: block;
-  //  justify-content: space-between;
-  //  padding: 20px;
-  //  padding-left: 72px;
-  //  padding-right: 72px;
-  //  align-items: center;
-  //  background: lightblue;
-  //  align-items: center;
+ 
+.header { 
+  background: white;
+  display: block;
+  width: 1522px;
+  height: 72px;
+}
 
-  .btn {
-     color: #f1541e;
-     font-family: "Graphik Webfont";
-     background-color: white;
-     padding: 10px;
-     text-decoration: none;
-   }
-  .btn:hover {
+.nav-bar {
+  max-width: 1328px;
+  height: 48px;
+  margin: 0 auto;
+  padding: 12px 36px;
+  font-size: 14px;
+  line-height: 1.4;
+  display: flex;
+  justify-content: space-between;
 
-   }
- }
+}
+
+.logo {
+  display: flex;
+  align-items: center;  
+  justify-content: center;
+  color: #f1541e;
+  background-color: white;
+  text-decoration: none;
+  width: 80px;
+  height: 40px;
+  font-size: 40px;
+  -webkit-font-smoothing: antialiased;
+  font-family: "Graphik Webfont";
+}
+
+.nav-bar-items {
+  width: 160px;
+  height: 48px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  font-family: "Graphik Webfont";
+  font-weight: bold;
+
+}
+
+.btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    color: #3f3e3e;
+}
+
