Add cart-icon to navbar

--- a/app/assets/stylesheets/nav_bar.scss
+++ b/app/assets/stylesheets/nav_bar.scss
@@ -43,11 +43,13 @@
 
 }
 
+
 .btn {
     display: flex;
     justify-content: center;
     align-items: center;
     text-decoration: none;
     color: #3f3e3e;
+    cursor: pointer;
 }
 
