--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -62,6 +62,17 @@
   object-fit: cover;
 }
 
+.imagedropshadow {
+    padding: 5px;
+    border: solid 1px #EFEFEF;
+}
+img.imagedropshadow:hover {
+    border: solid 1px #CCC;
+    -moz-box-shadow: 1px 1px 5px #999;
+    -webkit-box-shadow: 1px 1px 5px #999;
+    box-shadow: 1px 1px 5px #999;
+}
+
  .session-form {
    display: flex;
    flex-direction: column;
