--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -36,4 +36,11 @@ img.imagedropshadow:hover {
   box-shadow: 1px 1px 5px #999;
 }
 
+.product-page-back-button {
+  width: 100%;
+  height: 100px;
+  display: flex;
+  justify-content: left;
+  padding-left:100px;
+}
  
