--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -43,4 +43,39 @@ img.imagedropshadow:hover {
   justify-content: left;
   padding-left:100px;
 }
- 
+
+.product-page {
+  width: 100%;
+  height: 500px;
+  display: flex;
+  justify-content: center;
+}
+
+.product-page-frame {
+  width: 90%;
+  height: 500px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.product-page-img {
+  height: 100%;
+  width: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  // padding-right: 5%;
+}
+
+.product-page-img > img {
+  object-fit: cover;
+  border-radius: 3%;
+  height: 80%;
+  width: 80%;
+}
+
+.product-info {
+  width: 50%;
+  height: 100px;
+}
