--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -88,7 +88,7 @@ img.imagedropshadow:hover {
   font-family: "Guardian-EgypTT";
   font-weight: 300;
   letter-spacing: 0.35px;
-  color: #222;
+  color: rgb(63, 63, 63);
 }
 
 .product-info-price {
@@ -98,4 +98,9 @@ img.imagedropshadow:hover {
   color: #222;
   font-weight: 700;
   padding: 20px 0;
+}
+
+.product-info-description {
+  font-family: "Graphik Webfont",-apple-system,"Helvetica Neue","Droid Sans",Arial,sans-serif;
+  color: rgb(63, 63, 63);
 }
