--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -89,6 +89,7 @@ img.imagedropshadow:hover {
   font-weight: 300;
   letter-spacing: 0.35px;
   color: rgb(63, 63, 63);
+  margin-top: 8%;
 }
 
 .product-info-price {
@@ -103,4 +104,25 @@ img.imagedropshadow:hover {
 .product-info-description {
   font-family: "Graphik Webfont",-apple-system,"Helvetica Neue","Droid Sans",Arial,sans-serif;
   color: rgb(63, 63, 63);
+}
+
+.add-to-cart-button {
+  color:#ffffff;
+  text-decoration: none;
+  font-family: "Graphik Webfont",-apple-system,"Helvetica Neue","Droid Sans",Arial,sans-serif;
+  background: none;
+  border: none;
+  cursor: pointer;
+  border-radius: 24px;
+  font-size: 16px;
+  font-weight: bold;
+  line-height: 1.5;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #222222;
+  padding-top: 2%;
+  padding-bottom: 2%;
+  width: 70%;
+  margin-top: 22%;
 }
