--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -125,4 +125,9 @@ img.imagedropshadow:hover {
   padding-bottom: 2%;
   width: 70%;
   margin-top: 22%;
+  transition: transform 200ms cubic-bezier(0.345, 0.115, 0.135, 1.42),background 150ms ease-out,box-shadow 200ms ease-out;
+}
+
+.add-to-cart-button:hover {
+  transform: scale(1.02);
 }
