Update login button to growing-button

--- a/app/assets/stylesheets/reset.scss
+++ b/app/assets/stylesheets/reset.scss
@@ -10,7 +10,7 @@ html, head, body, header, nav, li, footer {
   vertical-align: inherit;
   box-sizing: inherit;
   background: transparent;
-  font: inherit;
+  font-family: "Graphik Webfont",-apple-system,"Helvetica Neue","Droid Sans",Arial,sans-serif;
 }
 
 header, nav, footer {
