--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -106,7 +106,7 @@ img.imagedropshadow:hover {
   color: rgb(63, 63, 63);
 }
 
-.add-to-cart-button {
+.growing-button {
   color:#ffffff;
   text-decoration: none;
   font-family: "Graphik Webfont",-apple-system,"Helvetica Neue","Droid Sans",Arial,sans-serif;
@@ -128,6 +128,6 @@ img.imagedropshadow:hover {
   transition: transform 200ms cubic-bezier(0.345, 0.115, 0.135, 1.42),background 150ms ease-out,box-shadow 200ms ease-out;
 }
 
-.add-to-cart-button:hover {
+.growing-button:hover {
   transform: scale(1.02);
 }
