--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -9,12 +9,11 @@
 
 .product-img-frame {
   width: 88%;
-  height: 170px;
+  height: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding-top: 10%;
-  padding-bottom: 10%;
+
 } 
 
 .product-img {
