--- a/app/assets/stylesheets/cartitems.scss
+++ b/app/assets/stylesheets/cartitems.scss
@@ -1,6 +1,6 @@
 .cart-nav-frame {
   width: 100%;
-  height: 50px;
+  height: 100px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -91,6 +91,45 @@
 
 .checkout-frame {
   width: 35%;
-  height: 300px;
+  height: 400px;
+}
 
+.checkout {
+  width: 80%;
+  height: 100%;
+  box-shadow: 0 4px 24px rgba(34, 34, 34, .15);
+  border-radius: 5%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-family: "Graphik Webfont",-apple-system,"Helvetica Neue","Droid Sans",Arial,sans-serif;
+  font-size: 18px;
+}
+
+.border-bottom {
+  border-bottom: 2px solid rgba(34, 34, 34, 0.15);
+}
+
+.checkout-styles {
+  padding: 20px 0;
+  width: 90%;
+  font-size: inherit;
+  font-family: inherit;
+}
+
+.items-total {
+  font-weight: bold;
+}
+
+.subtotal {
+
+}
+
+.shipping {
+
+}
+
+.total {
+  font-weight: bold;
 }
