--- a/app/assets/stylesheets/cartitems.scss
+++ b/app/assets/stylesheets/cartitems.scss
@@ -84,6 +84,7 @@
   font-weight: bold;
   display: flex;
   align-items: flex-start;
+  padding-top: 40px;
 }
 
 .frame {
@@ -131,14 +132,37 @@
   font-weight: bold;
 }
 
-.subtotal {
-
-}
-
-.shipping {
-
-}
-
 .total {
   font-weight: bold;
+}
+
+.cartitem-qty-dropdown {
+  transition: border-color 200ms ease-out,box-shadow 200ms ease-out;
+  box-shadow: 0 1px 6px 0 rgba(34, 34, 34, .15);
+    // box-shadow: 0 4px 24px rgba(34, 34, 34, .15);
+  font-size: 16px;
+  font-family: inherit;
+  height: 48px;
+  width: 70px;
+  padding-left: 12px;
+  padding-right: 16px;
+  border-radius: 6px;
+  background: #FFFFFF;
+  border-color: rgba(34, 34, 34, 0.15);
+  border-style: solid;
+  border-width: 1px;
+  cursor: pointer;
+}
+
+.cartitem-qty-dropdown:hover {
+  border-color: rgb(141, 141, 141);
+}
+
+.cartitem-info-frame > a {
+  width: 70px;
+  height: 80%;
+  font-weight: bold;
+  display: flex;
+  align-items: flex-start;
+  padding-top: 40px;
 }
