--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -1,10 +1,11 @@
 
 .home-products {
+  margin-top: 50px;
   width: 100%;
   height: 300px;
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items:flex-end;
 }
 
 .product-img-frame {
@@ -13,7 +14,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-
+  flex-wrap: wrap;
 } 
 
 .product-img {
