--- a/app/assets/stylesheets/nav_bar.scss
+++ b/app/assets/stylesheets/nav_bar.scss
@@ -121,4 +121,73 @@
   font-family: "Graphik Webfont";
 }
 
+.auth-dropdown {
+  display: flex;
+  background-size: 50px 50px;
+  width: 100px;
+  height: 50px;
+  position: relative;
+  cursor:pointer;
+  font-family: "Graphik Webfont",-apple-system,"Helvetica Neue","Droid Sans",Arial,sans-serif;
+}
 
+.auth-dropdown > ul {
+  display: none;
+  // width: 100%;
+  // height: 100%;
+  // position: absolute;
+  // top: 30px;
+  // left: 0;
+  // flex-direction: column;
+  // cursor: pointer;
+  // box-shadow: black 5px 5px 10px;
+  // flex: 1;
+  // background: ghostwhite;
+}
+
+.auth-dropdown:hover ul {
+  display: flex;
+  width: 200px;
+  height: 100%;
+  position: absolute;
+  top: 65%;
+  right: 20%;
+  flex-direction: column;
+  cursor: pointer;
+  box-shadow: 0 4px 20px rgba(34, 34, 34, 0.15);
+  flex: 1;
+  background: #FFF;
+  list-style-type: none;
+  border-radius: 12px;
+  justify-content: center;
+  align-items: flex-start;
+  transition: opacity 180ms ease-out,box-shadow 180ms cubic-bezier(0.175, 0.885, 0.4, 1.1),transform 180ms cubic-bezier(0.175, 0.885, 0.4, 1.1),visibility 180ms linear;
+  opacity: 1;
+  transform: scaleX(1) scaleY(1) perspective(1px);
+  visibility: visible;
+  padding-top: 5%;
+  padding-bottom: 5%;
+  border: 1px rgba(34, 34, 34, 0.15) solid;
+  font-size: 13px;
+  font-family: inherit;
+  color: #222;
+}
+
+.auth-dropdown > li {
+  // list-style-type: none;
+  display: flex;
+  // flex: 1;
+  font-family: inherit;
+  color: inherit;
+  height: 50px;
+  text-align: left;
+  width: max-content;
+  align-items: center;
+  justify-content: flex-start;
+  background-size: 100%;
+}
+
+.auth-dropdown ul li:hover {
+  transition: background-color 100ms ease-out;
+  background-color: rgb(236, 235, 235);
+}
