--- a/app/assets/stylesheets/nav_bar.scss
+++ b/app/assets/stylesheets/nav_bar.scss
@@ -147,7 +147,7 @@
 
 .auth-dropdown:hover ul {
   display: flex;
-  width: 200px;
+  width: 250px;
   height: 100%;
   position: absolute;
   top: 65%;
@@ -161,33 +161,43 @@
   border-radius: 12px;
   justify-content: center;
   align-items: flex-start;
-  transition: opacity 180ms ease-out,box-shadow 180ms cubic-bezier(0.175, 0.885, 0.4, 1.1),transform 180ms cubic-bezier(0.175, 0.885, 0.4, 1.1),visibility 180ms linear;
   opacity: 1;
   transform: scaleX(1) scaleY(1) perspective(1px);
   visibility: visible;
   padding-top: 5%;
   padding-bottom: 5%;
   border: 1px rgba(34, 34, 34, 0.15) solid;
-  font-size: 13px;
+  font-size: 14px;
   font-family: inherit;
   color: #222;
+  padding-left: 0;
+  padding-right: 0;
+  margin-right: 0;
 }
 
-.auth-dropdown > li {
-  // list-style-type: none;
+.auth-dropdown-ul > li {
   display: flex;
   // flex: 1;
   font-family: inherit;
   color: inherit;
-  height: 50px;
+  height: 40px;
   text-align: left;
-  width: max-content;
+  width: 80%;
   align-items: center;
   justify-content: flex-start;
-  background-size: 100%;
+  padding-left: 20%;
+  font-weight: 100;
 }
 
-.auth-dropdown ul li:hover {
+.auth-dropdown-ul > li:hover {
   transition: background-color 100ms ease-out;
   background-color: rgb(236, 235, 235);
+  width: 80%;
+  height: 40px;
+  display: flex;
+  text-align: left;
+  align-items: center;
+  justify-content: flex-start;
+  padding-left: 20%;
+  font-weight: 100;
 }
