--- a/app/assets/stylesheets/nav_bar.scss
+++ b/app/assets/stylesheets/nav_bar.scss
@@ -148,7 +148,7 @@
 .auth-dropdown:hover ul {
   display: flex;
   width: 250px;
-  height: 100%;
+  height: 100px;
   position: absolute;
   top: 65%;
   right: 20%;
@@ -180,7 +180,7 @@
   // flex: 1;
   font-family: inherit;
   color: inherit;
-  height: 40px;
+  height: 40%;
   text-align: left;
   width: 80%;
   align-items: center;
@@ -193,11 +193,16 @@
   transition: background-color 100ms ease-out;
   background-color: rgb(236, 235, 235);
   width: 80%;
-  height: 40px;
+  height: 40%;
   display: flex;
   text-align: left;
   align-items: center;
   justify-content: flex-start;
   padding-left: 20%;
   font-weight: 100;
+}
+
+.auth-link {
+  text-decoration: none;
+  color: inherit;
 }
