--- a/app/assets/stylesheets/nav_bar.scss
+++ b/app/assets/stylesheets/nav_bar.scss
@@ -147,6 +147,7 @@
 
 .auth-dropdown:hover ul {
   display: flex;
+  z-index: 2;
   width: 250px;
   height: 100px;
   position: absolute;
@@ -177,7 +178,7 @@
 
 .auth-dropdown-ul > li {
   display: flex;
-  // flex: 1;
+  flex: 1;
   font-family: inherit;
   color: inherit;
   height: 40%;
