Add custom favicon to header and change welcome message

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,7 @@
 
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
+    <%= favicon_link_tag asset_path('Btsy-icon.png') %>
 
     <%# current_user is pre-defined method in app controller %>
     <% if current_user %>
