--- a/app/assets/stylesheets/cartitems.scss
+++ b/app/assets/stylesheets/cartitems.scss
@@ -22,6 +22,13 @@
   letter-spacing: 0.5px;
 }
 
+.keep-shopping {
+  padding-right: 50px;
+  text-decoration: none;
+  color: black;
+  
+}
+
 .cartitem-frame {
   width: 100%;
   height: 300px;
