--- a/app/assets/stylesheets/session.scss
+++ b/app/assets/stylesheets/session.scss
@@ -8,6 +8,7 @@
    form {
      height: 400px;
      width: 300px;
+    border-radius: 20px;
      background: rgb(240, 240, 240);
      display: flex;
      flex-direction: column;
@@ -23,4 +24,9 @@
      padding: 10px;
      margin: 20px;
    }
+ }
+
+ .register {
+   text-decoration: none;
+   color: black;
  }
