--- a/app/assets/stylesheets/session.scss
+++ b/app/assets/stylesheets/session.scss
@@ -5,25 +5,49 @@
    height: 70vh;
    justify-content: center;
    align-items: center;
-   form {
-     height: 400px;
-     width: 300px;
-    border-radius: 20px;
-     background: rgb(240, 240, 240);
-     display: flex;
-     flex-direction: column;
-     justify-content: center;
-     align-items: center;
-   }
-   label {
-     padding: 10px;
-     display: block;
-   }
    button {
      display: block;
      padding: 10px;
      margin: 20px;
    }
+ }
+
+ .session-form > form {
+  height: 400px;
+  width: 300px;
+  border-radius: 20px;
+  background: rgb(240, 240, 240);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+ }
+
+ form label {
+    padding: 5px 0;
+    width: 87%;
+    display: flex;
+    justify-content: left;
+    font-weight: 500;
+    font-size: 14px;
+ }
+
+ form input {
+  width: 85%;
+  height: 30px;
+  transition: border-color 200ms ease-out,background 200ms ease-out;
+  box-shadow: 0 1px 4px 0 rgba(34, 34, 34, 0.1)inset;
+  border-color: rgba(34, 34, 34, 0.15);
+  border-style: solid;
+  border-width: 1px;
+  border-radius: 6px;
+  font-size: 16px;
+  padding-left: 12px;
+  background: #FFFFFF;
+ }
+
+ form input:hover {
+  border-color: rgba(7, 7, 7, 0.445);
  }
 
  .register {
