Add flash message to login page

--- a/app/assets/stylesheets/session.scss
+++ b/app/assets/stylesheets/session.scss
@@ -54,3 +54,12 @@
    text-decoration: none;
    color: black;
  }
+
+ .show-message-container {
+   position: relative;
+ }
+
+ .show-message {
+  position: absolute;
+  top: 40%;
+ }
