Complete flashmessage styling on login and signin page

--- a/app/assets/stylesheets/session.scss
+++ b/app/assets/stylesheets/session.scss
@@ -55,11 +55,16 @@
    color: black;
  }
 
- .show-message-container {
-   position: relative;
+ .message-container {
+  position: relative;
  }
 
- .show-message {
+ .signin-message {
   position: absolute;
   top: 40%;
+ }
+
+ .signup-message {
+  position: absolute;
+  top: 62%;
  }
