--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -136,3 +136,15 @@ img.imagedropshadow:hover {
 .product-index > a {
   font-weight: bold;
 }
+
+.search-results {
+  width: 100%;
+  height: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.search-results > h1 {
+  font-size: 20px;
+}
