--- a/app/assets/stylesheets/nav_bar.scss
+++ b/app/assets/stylesheets/nav_bar.scss
@@ -151,13 +151,13 @@
   background: #FFF;
   list-style-type: none;
   border-radius: 12px;
-  justify-content: center;
+  justify-content: left;
   align-items: flex-start;
   opacity: 1;
   transform: scaleX(1) scaleY(1) perspective(1px);
   visibility: visible;
-  padding-top: 5%;
-  padding-bottom: 5%;
+  padding-top: 5px;
+  padding-bottom: 5px;
   border: 1px rgba(34, 34, 34, 0.15) solid;
   font-size: 14px;
   font-family: inherit;
@@ -172,25 +172,25 @@
   flex: 1;
   font-family: inherit;
   color: inherit;
-  height: 40%;
+  max-height: 50px;
   text-align: left;
-  width: 80%;
+  width: 90%;
   align-items: center;
   justify-content: flex-start;
-  padding-left: 20%;
+  padding-left: 10%;
   font-weight: 100;
 }
 
 .cat-dropdown-ul > li:hover {
   transition: background-color 100ms ease-out;
   background-color: rgb(236, 235, 235);
-  width: 80%;
-  height: 40%;
+  width: 90%;
+  height: 20px;
   display: flex;
   text-align: left;
   align-items: center;
   justify-content: flex-start;
-  padding-left: 20%;
+  padding-left: 10%;
   font-weight: 100;
 }
 
