--- a/app/assets/stylesheets/nav_bar.scss
+++ b/app/assets/stylesheets/nav_bar.scss
@@ -140,7 +140,7 @@
   display: flex;
   z-index: 2;
   width: 250px;
-  height: 300px;
+  // height: 300px;
   position: absolute;
   top: 100%;
   left: -10%;
@@ -172,7 +172,7 @@
   flex: 1;
   font-family: inherit;
   color: inherit;
-  max-height: 50px;
+  min-height: 50px;
   text-align: left;
   width: 90%;
   align-items: center;
