--- a/app/assets/stylesheets/nav_bar.scss
+++ b/app/assets/stylesheets/nav_bar.scss
@@ -283,7 +283,7 @@
   
   z-index: 2;
   width: 300px;
-  height: 130px;
+  // height: 150px;
   position: absolute;
   top: 46px;
   flex-direction: column;
@@ -298,15 +298,20 @@
   opacity: 1;
   transform: scaleX(1) scaleY(1) perspective(1px);
   visibility: visible;
-  padding-top: 5%;
-  padding-bottom: 5%;
+  padding: 5px 0;
+  // padding-top: 5%;
+  // padding-bottom: 5%;
   border: 1px rgba(34, 34, 34, 0.15) solid;
   font-size: 14px;
   font-family: inherit;
   color: #222;
-  padding-left: 0;
-  padding-right: 0;
+  // padding-left: 0;
+  // padding-right: 0;
   margin-right: 0;
+}
+
+.popular-right-now {
+  background-color: rgb(236, 235, 235);
 }
 
 .search-dropdown-ul > li {
