--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
         window.currentUser = {
           "id": <%= current_user.id %>,
           "username": "<%= current_user.username %>",
-          "email": "<%= current_user.email %>"
+          "email": "<%= current_user.email %>",
         };
       </script>
     <% end %>
