Popular right now hover no effect

--- a/app/assets/stylesheets/nav_bar.scss
+++ b/app/assets/stylesheets/nav_bar.scss
@@ -324,7 +324,7 @@
   font-size: 15px;
 }
 
-.search-dropdown-ul > li:hover {
+.search-dropdown-options:hover {
   transition: background-color 100ms ease-out;
   background-color: rgb(236, 235, 235);
   width: 90%;
