Checkout flash message

--- a/app/assets/stylesheets/session.scss
+++ b/app/assets/stylesheets/session.scss
@@ -78,3 +78,12 @@
    position: absolute;
    top: 50%;
 }
+
+.checkout-frame {
+  position: relative;
+}
+
+.checkout-message {
+  position: absolute;
+  top: 70%;
+}
